# libaosc

./: CMakeLists.txt  ChangeLog  Changelog  Makefile  configure.ac  getput.h  i386_ascii.c  i386_ascii.h  i386_nops.c  i386_nops.h  i386_opcode.h  mt19937.c  mt19937.h  rand.c  rand.h  stack.c  stack.h  string.c  string.h  strings.c  strings.h  vector.h  wrapper.c  wrapper.h  x86_ascii.c  x86_ascii.h
docs/: libaosc.3  opcodes.txt  smegma.1
examples/: CMakeLists.txt  Makefile  Makefile.am  exec_sh_test.c  exec_sh_test_libemu.c  shellcode.h
examples/shellcode/: shellcode64.asm
src/: CMakeLists.txt  Makefile.am  config.h.in  dynstring.c  dynstring.h  getput.h  i386_nops.c  i386_nops.h  i386_opcode.h  rand.c  rand.h  string.c  vector.h  wrapper.c  wrapper.h  x86_ascii.c  x86_ascii.h
